--- a/style.css
+++ b/style.css
@@ -1,16 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  color: white;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+
+}
+
 body {
+  background-color: cadetblue;
   display: flex;
   flex-direction: column; 
   align-items: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #calcBody {
-  width: 570px;
-  height: 500px;
+  width: 450px;
   background-color: darkgray;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 14px;
+
 }
 
 #result {
@@ -19,14 +36,38 @@ body {
   background-color: white;
   border: solid darkgray 10px;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+}
+
+.resultado {
+  font-size: 2em;
+  padding: 10px;
+}
+
+.input {
+  display: flex;
+  margin: 10px 10px;
+  width: 428px;
+}
+
+#input {
+  width: 100%;
+  padding: 15px;
+  border: 1px solid darkgrey;
+  border-radius: 10px;
+  text-align: right;
 }
 
 #buttons {
   border: solid white;
   box-sizing: border-box;
-  width: 426px;
+  width: auto;
   display: flex;
   align-content: flex-end;
+  margin-bottom: 15px;
 }
 
 #numbers {
@@ -81,3 +122,4 @@ body {
   width: 100%;
   height: 60px;
 }
+
