--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header {
   width: 100%;
   text-align: center;
   padding: 20px;
-
+  font-size: 2em;
 }
 
 body {
@@ -40,11 +40,25 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 30px;
+  flex-basis: 80px;
 }
 
 .resultado {
+  color: rgb(75, 75, 255);
   font-size: 2em;
   padding: 10px;
+}
+
+.warning {
+  color: red;
+  padding: 10px;
+  font-size: 2em;
+}
+
+.alert {
+  color: rgb(202, 202, 2);
+  padding: 10px;
+  font-size: 2em;
 }
 
 .input {
@@ -57,8 +71,9 @@ body {
   width: 100%;
   padding: 15px;
   border: 1px solid darkgrey;
-  border-radius: 10px;
+  border-radius: 20px;
   text-align: right;
+  font-size: 2em;
 }
 
 #buttons {
